<resources>
    <string name="app_name">FSVT</string>
    <string name="Connect_Button">Connect</string>
    <string name="Connected_Button">Connected</string>
    <string name="Scanning_Button">Scanning…</string>
    <string name="Reset_Button">Reset</string>
    <string name="Start_Program">Start</string>
    <string name="Stop_Program">Halt</string>
    <string name="Disconnect_Button">Disconnect</string>
    <string name="Dialog_Title">Settings</string>
    <string name="Title_Hint">Name</string>
    <string name="Distance_Hint">Distance</string>
    <string name="Dialog_Submit">Submit</string>
    <string name="Dialog_Cancel">Back</string>
    <string name="Probe1_Label">Probe 1:</string>
    <string name="Probe2_Label">Probe 2:</string>
    <string name="Probe_Data">Empty</string>
    <string name="Unit_Feet">Feet</string>
    <string name="Unit_Meters">Meters</string>
    <string name="Velocity_Label">Velocity:</string>
    <string name="Velocity_Empty">Empty</string>
    <string name="Velocity_Feet">%s ft/s</string>
    <string name="Velocity_Meters">%s m/s</string>
    <string name="Empty_Placeholder">NA%</string>
    <string name="Battery_Probe_One">Battery Probe 1:</string>
    <string name="Battery_Probe_Two">Battery Probe 2:</string>
    <string name="copyright">© 2023 FSVT - All Rights Reserved.</string>
</resources>